--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ amintest.py
 
 # Distribution / packaging
 .Python
-# build/
+build/
 develop-eggs/
 dist/
 downloads/
@@ -79,7 +79,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-# docs/_build/
+docs/_build/
 
 # PyBuilder
 target/
