--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pandas >= 1.3.3
 numpy >= 1.21.2
-xlsxwriter <= 1.3.7
 plotly >= 4.12.0
 tabulate >= 0.8.9
 openpyxl >= 3.0.6
 IPython >= 7.22.0
 pymrio
+pytest
+pandas
+pyyaml
+xlsxwriter 
