--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,3 +15,4 @@ recursive-include mario *.json
 recursive-include mario *.py
 recursive-include mario *.stats
 recursive-include mario *.xlsx
+recursive-include mario *.yaml
