bug fix with installation

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,3 +16,5 @@ recursive-include mario *.py
 recursive-include mario *.stats
 recursive-include mario *.xlsx
 recursive-include mario *.yaml
+include mario/settings/*.yaml
+include mario/settings/*.py
