--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy == 1.21.2
+numpy == 2.1.1
 plotly
 tabulate
-openpyxl == 3.0.6
-IPython == 7.22.0
+openpyxl == 3.1.0
+IPython >= 8.27.0
 pymrio
 pytest 
 pandas == 2.2.3
